test/architecture-quality-test-9-395